* java/awt/Point.java (toString): Use getClass().getName(). 	Added javadoc.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48929 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-16  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/Point.java (toString): Use getClass().getName().
+	Added javadoc.
+
 	* java/util/IdentityHashMap.java (IdentityHashMap): Removed
 	commented code.
 	(hash): Correctly compute initial value for `h'.
