--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-16  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/CheckboxGroup.java: Merged with Classpath.
+	* java/awt/Checkbox.java: Merged with Classpath.
+
 	* java/awt/Dimension.java: Updated copyright.  Added javadoc from
 	Classpath.
 	* java/awt/Point.java: Updated copyright.
