* java/awt/Canvas.java (serialVersionUID): New constant. 	Updated copyright.  Added javadoc from Classpath. 	* java/awt/ItemSelectable.java: Replaced with Classpath version.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48934 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-16  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/Canvas.java (serialVersionUID): New constant.
+	Updated copyright.  Added javadoc from Classpath.
+	* java/awt/ItemSelectable.java: Replaced with Classpath version.
+
 	* java/awt/CheckboxGroup.java: Merged with Classpath.
 	* java/awt/Checkbox.java: Merged with Classpath.
 
