* config/h8300/h8300-protos.h: Replace emit_a_shift with 	output_a_shift. 	* config/h8300/h8300.c: Likewise. 	* config/h8300/h8300.md: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48935 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -1829,7 +1829,7 @@
 			  (match_operand:QI 2 "nonmemory_operand" "KM,rn")]))
    (clobber (match_scratch:QI 4 "=X,&r"))]
   ""
-  "* return emit_a_shift (insn, operands);"
+  "* return output_a_shift (insn, operands);"
   [(set_attr "length" "20")
    (set_attr "cc" "clobber")])
 
@@ -1863,7 +1863,7 @@
 			  (match_operand:QI 2 "nonmemory_operand" "KM,rn")]))
    (clobber (match_scratch:QI 4 "=X,&r"))]
   ""
-  "* return emit_a_shift (insn, operands);"
+  "* return output_a_shift (insn, operands);"
   [(set_attr "length" "20")
    (set_attr "cc" "clobber")])
 
@@ -1900,7 +1900,7 @@
 			  (match_operand:QI 2 "nonmemory_operand" "K,rn")]))
    (clobber (match_scratch:QI 4 "=X,&r"))]
   ""
-  "* return emit_a_shift (insn, operands);"
+  "* return output_a_shift (insn, operands);"
   [(set_attr "length" "20")
    (set_attr "cc" "clobber")])
 
