--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2002-01-16  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300-protos.h: Replace emit_a_shift with
+	output_a_shift.
+	* config/h8300/h8300.c: Likewise.
+	* config/h8300/h8300.md: Likewise.
+
+2002-01-16  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.md (pushqi1_h8300): Use a tab instead of
 	spaces after an opcode name.
 	(pushqi1_h8300hs): Likewise.
