--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-16  H.J. Lu <hjl@gnu.org>
 
+	* config/mips/linux.h: Include "mips/abi64.h".
+
+2002-01-16  H.J. Lu <hjl@gnu.org>
+
 	* config/mips/t-linux: New.
 
 	* config.gcc: Add mips/t-linux to tmake_file for mips*-*-linux*.
