* config/ia64/ia64.md (prologue_use): New. 	* config/ia64/ia64.c (ia64_expand_prologue): Use 	gen_prologue_use instead of gen_rtx_USE. 	(group_barrier_needed_p): Handle CODE_FOR_prologue_use the same way 	as CODE_FOR_pred_rel_mutex. 	(ia64_sched_reorder2): Likewise.
	* gcc.c-torture/compile/20020116-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48946 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -67,6 +67,7 @@
 ;;	22      bundle selector
 ;;	23      cycle display
 ;;      24      addp4
+;;	25	prologue_use
 ;;
 ;; unspec_volatile:
 ;;	0	alloc
@@ -5302,3 +5303,12 @@
   "addp4 %0 = 0,%1"
   [(set_attr "itanium_class" "ialu")])
 
+;;
+;; As USE insns aren't meaningful after reload, this is used instead
+;; to prevent deleting instructions setting registers for EH handling
+(define_insn "prologue_use"
+  [(unspec:DI [(match_operand:DI 0 "register_operand" "")] 25)]
+  ""
+  "// %0 needed for EH"
+  [(set_attr "itanium_class" "ignore")
+   (set_attr "predicable" "no")])
