--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-01-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/ia64/ia64.md (prologue_use): New.
+	* config/ia64/ia64.c (ia64_expand_prologue): Use
+	gen_prologue_use instead of gen_rtx_USE.
+	(group_barrier_needed_p): Handle CODE_FOR_prologue_use the same way
+	as CODE_FOR_pred_rel_mutex.
+	(ia64_sched_reorder2): Likewise.
+
 2002-01-16  Eric Christopher  <echristo@redhat.com>
 
 	* config/mips/r3900.h: Reformat.
