--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020116-1.c: New test.
+
 2002-01-16  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20020116-2.c: New test.
