--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-17  Jason Merrill  <jason@redhat.com>
+
+	* except.c (add_partial_entry): Remove backwards compatibility code.
+	(end_protect_partials): Likewise.
+
 2002-01-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/ia64/ia64.md (prologue_use): New.
