* dbxout.c (dbxout_type): Support const and volatile.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48954 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-17  Jason Merrill  <jason@redhat.com>
 
+	* dbxout.c (dbxout_type): Support const and volatile.
+
 	* except.c (add_partial_entry): Remove backwards compatibility code.
 	(end_protect_partials): Likewise.
 
