--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-17  Tom Tromey  <tromey@redhat.com>
+
+	* java/awt/AWTError.java: Replaced with Classpath version.
+	* java/awt/AWTException.java: Replaced with Classpath version.
+	* java/awt/IllegalComponentStateException.java: Replaced with
+	Classpath version.
+
 2002-01-16  Tom Tromey  <tromey@redhat.com>
 
 	* java/awt/Canvas.java (serialVersionUID): New constant.
