2002-01-17  Aldy Hernandez  <aldyh@redhat.com>
        * config.gcc (cpu_type): Include altivec.h in powerpc
        extra_headers.
        Same for darwin.

        * config/rs6000/altivec.h: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48963 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-17  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config.gcc (cpu_type): Include altivec.h in powerpc
+        extra_headers.
+        Same for darwin.
+
+        * config/rs6000/altivec.h: New.
+
 2002-01-17  David Edelsohn  <edelsohn@gnu.org>
 
 	* doc/install.texi (*-ibm-aix*): Update assembler and exception
