--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-01-18  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	* gcc.misc-tests/i386-prefetch.exp: Save and restore
+	torture_with_loops and torture_without_loops
+
 2002-01-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20020116-1.c: New test.
