- Add more information about interposing functions using runtime-linking.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48970 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/trouble.texi
+++ b/gcc/doc/trouble.texi
@@ -313,6 +313,13 @@ application. Applications are not required to use the
 merging semantics will continue to function correctly.
 
 @item
+An application can interpose its own definition of functions for
+functions invoked by @file{libstdc++.a} with ``runtime-linking''
+enabled on AIX.  To accomplish this the application must be linked
+with ``runtime-linking'' option and the functions explicitly must be
+exported by the application (@option{-Wl,-brtl,-bE:exportfile}).
+
+@item
 AIX on the RS/6000 provides support (NLS) for environments outside of
 the United States.  Compilers and assemblers use NLS to support
 locale-specific representations of various objects including
