* java/awt/ActiveEvent.java: Updated copyright.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48972 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-17  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/ActiveEvent.java: Updated copyright.
+
 	* java/awt/AWTError.java: Replaced with Classpath version.
 	* java/awt/AWTException.java: Replaced with Classpath version.
 	* java/awt/IllegalComponentStateException.java: Replaced with
