* java/awt/MenuComponent.java: Merged with Classpath. 	* java/awt/MenuItem.java: Merged with Classpath. 	* java/awt/Button.java: Merged with Classpath.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48975 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-17  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/MenuComponent.java: Merged with Classpath.
+	* java/awt/MenuItem.java: Merged with Classpath.
+	* java/awt/Button.java: Merged with Classpath.
+
 	* java/awt/ActiveEvent.java: Updated copyright.
 
 	* java/awt/AWTError.java: Replaced with Classpath version.
