--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-18  David Edelsohn  <edelsohn@gnu.org>
+
+	* src/powerpc/darwin.S (_ffi_call_AIX): New.
+
 2002-01-17  David Edelsohn  <edelsohn@gnu.org>
 
 	* Makefile.am (EXTRA_DIST): Add Darwin and AIX files.
