--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-18  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.md: Fix an insn length.
+
+2002-01-18  Kazu Hirata  <kazu@hxi.com>
+
 	* bitmap.h: Fix comment formatting.
 	* combine.c: Likewise.
 	* cppfiles.c: Likewise.
