* testsuite/gcc.c-torture/execute/20020118-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48991 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-18  Kazu Hirata  <kazu@hxi.com>
+
+	* testsuite/gcc.c-torture/execute/20020118-1.c: New test.
+
 2001-01-18  David Billinghurst <David.Billinghurst@riotinto.com>
 
 	* g++.dg/other/deprecated.C: Fix FAIL from 
