* java/net/natPlainSocketImpl.cc: Include 	IllegalArgumentException.h. 	(_Jv_recv): New template function. 	(BooleanClass): Removed. 	(read): Use _Jv_recv. 	(setOption): Use Boolean::class$.  Throw exception if object is 	not Boolean or Integer.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48992 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2002-01-18  Tom Tromey  <tromey@redhat.com>
+
+	* java/net/natPlainSocketImpl.cc: Include
+	IllegalArgumentException.h.
+	(_Jv_recv): New template function.
+	(BooleanClass): Removed.
+	(read): Use _Jv_recv.
+	(setOption): Use Boolean::class$.  Throw exception if object is
+	not Boolean or Integer.
+
 2002-01-17  Tom Tromey  <tromey@redhat.com>
 
 	* java/awt/MenuComponent.java: Merged with Classpath.
