--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,6 +1,7 @@
 2002-01-18  David Edelsohn  <edelsohn@gnu.org>
 
 	* src/powerpc/darwin.S (_ffi_call_AIX): New.
+	* src/powerpc/aix.S (ffi_call_DARWIN): New.
 
 2002-01-17  David Edelsohn  <edelsohn@gnu.org>
 
