--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-18  Toon Moene  <toon@moene.indiv.nluug.nl>
 
+	* Makefile.in: Add missing `/' separator in last change.
+
+2002-01-18  Toon Moene  <toon@moene.indiv.nluug.nl>
+
 	* Makefile.in: Install libg2c.{a|la|so} in $(libdir)$(MULTISUBDIR)
 	instead of $(libsubdir)$(MULTISUBDIR).
 
