--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-18  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	* doc/install.texi (hppa*-hp-hpux11): Clarify that GCC 2.95.x cannot
+	be used for bootstrapping GCC 3.0.
+
 2002-01-18  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md: Fix an insn length.
