--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-18  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/20020118-1.c: New.
+
 2002-01-18  Kazu Hirata  <kazu@hxi.com>
 
 	* testsuite/gcc.c-torture/execute/20020118-1.c: New test.
