--- a/new-regalloc-branch/gcc/ChangeLog.RA
+++ b/new-regalloc-branch/gcc/ChangeLog.RA
@@ -1,3 +1,16 @@
+2002-01-19  Michael Matz  <matzmich@cs.tu-berlin.de>
+
+	* ra.c (ok): Wide webs coalesced to precolored ones take more
+	than one hardweb.  Check all of them for non-conflict.
+	(colorize_one_web): Even when using usable_regs try first
+	the preferred colors of them.
+	(try_recolor_web): Check mode and wide coalesced precolored webs.
+	(regnos_coalesced_to_hardregs): New.
+	(emit_colors): Initialize it.
+	(init_ra): Don't skip some regs when looking for all regs for a mode.
+	(remove_suspicious_death_notes): New.
+	(reg_alloc): Call it.
+	
 2002-01-17  Michael Matz  <matzmich@cs.tu-berlin.de>
 
 	* ra.c (conflicts_between_webs): Also consider conflicts in
