* config.gcc (hppa*64*-*-hpux11*): Fix tmake_file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49013 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-19  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* config.gcc (hppa*64*-*-hpux11*): Fix tmake_file.
+
 2002-01-19  Tom Rix  <trix@redhat.com>
 
 	* config/rs6000/rs6000.md: Fix DF split for 64 bit hosts.
