* java/util/zip/ZipOutputStream.java (putNextEntry):  Clear 	uncompressed_size in readiness for next entry.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49014 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-19  Per Bothner  <per@bothner.com>
+
+	* java/util/zip/ZipOutputStream.java (putNextEntry):  Clear
+	uncompressed_size in readiness for next entry.
+
 2002-01-18  Tom Tromey  <tromey@redhat.com>
 
 	* java/net/natPlainSocketImpl.cc: Include
