--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-19  Nathan Sidwell  <nathan@codesourcery.com>
+
+	Fix regression introduced with patch for c++/775
+	* parse.y (class_head_defn): Check for template specializations
+	with a different class-key.
+
 2002-01-17  Jason Merrill  <jason@redhat.com>
 
 	* decl.c (begin_constructor_body, begin_destructor_body): New fns.
