--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-19  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/template/access1.C: New test.
+
 2002-01-18  Aldy Hernandez  <aldyh@redhat.com>
 
         * gcc.dg/20020118-1.c: New.
