--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-20  Graham Stott  <grahams@redhat.com>
+
+	* cfgloop.c (flow_loop_preheader_scan): Fix typo.
+
 2002-01-19  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* config.gcc (hppa*64*-*-hpux11*): Fix tmake_file.
