2002-01-20  Toon Moene  <toon@moene.indiv.nluug.nl>
	* Makefile.in: $(MULTISUBDIR) has an implied leading `/';
	remove duplicates.
	Use libtool for removing libg2c{a|la|so} for the `uninstall' target.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49021 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-20  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* Makefile.in: $(MULTISUBDIR) has an implied leading `/';
+	remove duplicates.
+	Use libtool for removing libg2c{a|la|so} for the `uninstall' target.
+
 2002-01-18  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* Makefile.in: Add missing `/' separator in last change.
