* dwarf2out.c (loc_descriptor_from_tree): Add TRUTH_*_EXPR cases. 	(gen_struct_or_union_type_die): Don't SIGSEGV if no TYPE_STUB_DECL 	in incomplete case.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49022 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jan 20 18:40:14 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* dwarf2out.c (loc_descriptor_from_tree): Add TRUTH_*_EXPR cases.
+	(gen_struct_or_union_type_die): Don't SIGSEGV if no TYPE_STUB_DECL
+	in incomplete case.
+
 2002-01-20  Graham Stott  <grahams@redhat.com>
 
 	* cfgloop.c (flow_loop_preheader_scan): Fix typo.
