--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-20  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.md: Update the comments at the beginning
+	of the file.
+
+2002-01-20  Kazu Hirata  <kazu@hxi.com>
+
 	* config/i370/i370.c: Fix comment formatting.
 	* config/i370/i370.h: Likewise.
 	* config/i370/i370.md: Likewise.
