--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-20  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.c (function_arg): Update a comment.
+
+2002-01-20  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.md: Update the comments at the beginning
 	of the file.
 
