--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-01-21  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* config/alpha/alpha.h, config/arc/arc.h, config/avr/avr.h,
+	config/c4x/c4x.h, config/d30v/d30v.h, config/dsp16xx/dsp16xx.h,
+	config/fr30/fr30.h, config/ia64/ia64.h, config/m68hc11/m68hc11.h,
+	config/mips/mips.h, config/rs6000/rs6000.h, config/sparc/sparc.h,
+	config/stormy16/stormy16.h, config/v850/v850.h: Remove commented
+	out target macro definitions and non-target-specific comments
+	mostly taken from old versions of the manual.
+
 2002-01-20  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.h: Fix comment formatting.
