--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-21  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.c (function_arg): Replace 0 with NULL_RTX
+	as appropriate.
+	Remove redundant code.
+
 2002-01-21  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* config/alpha/alpha.h, config/arc/arc.h, config/avr/avr.h,
