2002-01-21  David.Billinghurst <David.Billinghurst@riotinto.com>
	* lib/prune.exp (prune_gcc_output): Prune "At global scope"
	messages
	* g++.dg/other/deprecated.C: Remove dg-bogus comment for
	"At global scope" warning
	* g++.dg/ext/align1.C: Change cygwin test for alignment
	from db-bogus to dg-warning


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49044 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,12 @@
+2002-01-21  David.Billinghurst <David.Billinghurst@riotinto.com>
+
+	* lib/prune.exp (prune_gcc_output): Prune "At global scope"
+	messages
+	* g++.dg/other/deprecated.C: Remove dg-bogus comment for
+	"At global scope" warning
+	* g++.dg/ext/align1.C: Change cygwin test for alignment
+	from db-bogus to dg-warning
+
 2002-01-21  Zack Weinberg  <zack@codesourcery.com>
 
 	* g77.f-torture/compile/cpp2.F: New test.
