2002-01-21  Daniel Jacobowitz  <drow@mvista.com>
        * config.gcc: Add entries to supported PowerPC --with-cpu
        types.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49047 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-21  Daniel Jacobowitz  <drow@mvista.com>
+
+	* config.gcc: Add entries to supported PowerPC --with-cpu
+	types.
+
 2002-01-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.c (ix86_function_arg_regno_p): Never return
