--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-21  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+
+	* config/rs6000/t-ppccomm (CRTSTUFF_T_CFLAGS_S): Re-add -fPIC.
+
 2002-01-21  Daniel Jacobowitz  <drow@mvista.com>
 
 	* config.gcc: Add entries to supported PowerPC --with-cpu
