--- a/ast-optimizer-branch/gcc/ChangeLog
+++ b/ast-optimizer-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-21  Diego Novillo  <dnovillo@redhat.com>
+
+	* tree-dfa.c (find_refs_in_stmt): Fix capitalization in error
+	message.
+	(find_refs_in_expr): Ditto.
+
 2002-01-20  Diego Novillo  <dnovillo@redhat.com>
             Sebastian Pop  <s.pop@laposte.net>
 
