--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-01-21  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa64-hpux.h (MD_EXEC_PREFIX): Set to "/usr/ccs/bin".
+	(MD_STARTFILE_PREFIX): Set to "/usr/ccs/lib/pa20_64/".
+	(MD_STARTFILE_PREFIX_1): Set to "/opt/langtools/lib/pa20_64/".
+	(EH_FRAME_IN_DATA_SECTION): Define and update comment on init sections.
+	(ENDFILE_SPEC): Undefine.
+	(STARTFILE_SPEC): Redefine for PA.
+
 2002-01-21  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* config/rs6000/t-ppccomm (CRTSTUFF_T_CFLAGS_S): Re-add -fPIC.
