--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-21  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+
+	* gcc.c-torture/compile/20020121-1.c: New test.
+
 2002-01-21  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* lib/g77.exp (g77_link_flags): Remove check for libg2c.so in setting
