--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-21  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+
+	* combine.c (simplify_and_const_int): Properly sign-extend CONSTOP.
+
 2002-01-21  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* pa64-hpux.h (MD_EXEC_PREFIX): Set to "/usr/ccs/bin".
