--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-21  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa-protos.h (reg_before_reload_operand): New function prototype.
+	* pa.c (reg_before_reload_operand): New function implementation.
+	* pa.md (decrement_and_branch_until_zero, movb): Use it.  Change "!*m"
+	contraints to "*m".
+
 2002-01-21  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* combine.c (simplify_and_const_int): Properly sign-extend CONSTOP.
