--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-22  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	* gcc.dg/20010207-1.c: Restrict to i?86-*-[eflno]*
+
 2002-01-21  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* gcc.c-torture/compile/20020121-1.c: New test.
