* gcc.dg/20020122-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49065 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-22  Hans-Peter Nilsson  <hp@axis.com>
+
+	* gcc.dg/20020122-1.c: New test.
+
 2001-01-22  David.Billinghurst <David.Billinghurst@riotinto.com>
 
 	* g++.old-deja/g++.ext/attrib5.C: XFAIL cygwin too
