* c-typeck.c (parser_build_binary_op): If result from 	build_binary_op is ERROR_MARK just return error_mark_node without 	further processing.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49066 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-22  Hans-Peter Nilsson  <hp@axis.com>
+
+	* c-typeck.c (parser_build_binary_op): If result from
+	build_binary_op is ERROR_MARK just return error_mark_node without
+	further processing.
+
 2002-01-21  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* config/netbsd.h (TARGET_HAS_F_SETLKW): define.
